syntax = "proto3";
package elys.launchpad;

import "gogoproto/gogo.proto";

option go_package = "github.com/elys-network/elys/x/launchpad/types";

// 0-20% raise 100% bonus
// 20-30% raise 90% bonus
// 30-40% raise bonus 80%
// 40-50% raise bonus 70%
// 50-60% raise bonus 60%
// 60-70% raise bonus 50%
// 70-80% raise bonus 40%
// 80-100% raise bonus 30%
message Bonus {
  repeated uint64 raise_percents = 1;
  repeated uint64 bonus_percents = 2;
  uint64 lock_duration = 3;    // 6 months
  uint64 vesting_duration = 4; // 12 months
}

message Purchase {
  uint64 order_id = 1;
  string order_maker = 2;
  string spending_token = 3;
  string token_amount = 4;
  string elys_amount = 5;
  string returned_elys_amount = 6;
}